Stop recreating closed PRs (back to default)

--- a/renovate.json
+++ b/renovate.json
@@ -115,6 +115,5 @@
   "semanticCommitScope": "",
   "stabilityDays": 3,
   "unpublishSafe": true,
-  "prCreation": "not-pending",
-  "recreateClosed": true
+  "prCreation": "not-pending"
 }
