--- a/renovate.json
+++ b/renovate.json
@@ -115,5 +115,6 @@
   "semanticCommitScope": "",
   "stabilityDays": 3,
   "unpublishSafe": true,
-  "prCreation": "not-pending"
+  "prCreation": "not-pending",
+  "recreateClosed": true
 }
