Enable rebase stale PRs

--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,7 @@
 {
   "extends": [
     "config:base",
+    ":rebaseStalePrs",
     "schedule:weekdays",
     ":enableVulnerabilityAlertsWithLabel(security)",
     ":labels(dependencies, skynet:merge:squash)",
