--- a/renovate.json
+++ b/renovate.json
@@ -117,7 +117,7 @@
   "semanticCommitScope": "",
   "stabilityDays": 3,
   "unpublishSafe": true,
-  "prCreation": "not-pending",
-  "recreateClosed": true,
-  "rebaseWhen": "behind-base-branch"
+  "prCreation": "immediate",
+  "rebaseWhen": "behind-base-branch",
+  "recreateClosed": true
 }
