Stop adding skynet label - it's messing with renovate

--- a/renovate.json
+++ b/renovate.json
@@ -36,8 +36,7 @@
       ],
       "labels": [
         "MAJOR-UPDATE",
-        "dependencies",
-        "skynet:merge:squash"
+        "dependencies"
       ]
     },
     {
