Fix a single label

--- a/renovate.json
+++ b/renovate.json
@@ -6,7 +6,7 @@
     ":rebaseStalePrs",
     "schedule:weekdays",
     ":enableVulnerabilityAlertsWithLabel(security)",
-    ":labels(dependencies)",
+    ":label(dependencies)",
     ":prHourlyLimitNone",
     ":prNotPending",
     ":timezone(Europe/Oslo)",
